--- a/package.json
+++ b/package.json
@@ -10,12 +10,14 @@
     "test": "vitest run",
     "test:watch": "vitest",
     "preview": "vite preview",
-    "format": "prettier --write \"src/**/*.{ts,tsx,css}\""
+    "format": "prettier --write \"src/**/*.{ts,tsx,css}\"",
+    "start": "serve dist -s -l 3000"
   },
   "dependencies": {
     "react": "^19.0.0",
     "react-dom": "^19.0.0",
     "react-router-dom": "^6.26.0",
+    "serve": "^14.2.5",
     "zod": "^3.23.8"
   },
   "devDependencies": {
