--- a/package.json
+++ b/package.json
@@ -11,7 +11,8 @@
     "test:watch": "vitest",
     "preview": "vite preview",
     "format": "prettier --write \"src/**/*.{ts,tsx,css}\"",
-    "start": "vite preview --port 3000"
+    "start-dev": "vite preview --port 3000",
+    "start": "serve dist -s -l 3000"
   },
   "dependencies": {
     "react": "^19.0.0",
